--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ body {
 }
 
 .page {
-  width: 600px;
+  max-width: 1000px;
   margin: 0 auto;
   padding-top: 65px;
 }
 
 nav {
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
 
   margin-bottom: 15px;
@@ -38,6 +38,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  gap: 4.8rem;
+}
+
 ul li a {
   opacity: 0.5;
 }
@@ -53,6 +57,7 @@ ul {
 }
 
 h1 {
+  font-family: 'Mulish', sans-serif;
   font-size: 49px;
   line-height: 56px;
   color: #1f1534;
